# ITMO_education

./: .gitignore  README.md
C++/: README.md
C++/lab1-solve-linear-system/: LinearSystem.c  LinearSystem.h  LinearSystemSolve.c  LinearSystemSolve.h  main.c
C++/lab2-transcoding/: main.c
C++/lab3-sort/: human.c  human.h  main.c  vector.c  vector.h
C++/lab4-long-arithmetik/: CMakeLists.txt  LN.cpp  LN.h  README.md  main.cpp
algorithms-and-data-structures/: README.md
algorithms-and-data-structures/lab-1/: B.cpp  C.cpp  E.cpp  G.cpp  I.cpp  K.cpp
algorithms-and-data-structures/lab-1-1/: A.cpp  D.cpp  F.cpp  H.cpp  d.cpp  e.cpp  f.cpp  h.cpp  i.cpp  k.cpp
algorithms-and-data-structures/lab-1-2/: b.cpp  c.cpp  h.cpp
algorithms-and-data-structures/lab-1-3/: a.cpp  b.cpp  e.cpp  j.cpp
algorithms-and-data-structures/lab-2-1/: b.cpp  e.cpp  g.cpp  h.cpp  i.cpp  k.cpp  m.cpp  n.cpp
algorithms-and-data-structures/lab-2-2/: b.cpp  c.cpp  e.cpp  f.cpp  g.cpp  i.cpp
algorithms-and-data-structures/lab-2-3/: d.cpp  f.cpp  g.cpp
algorithms-and-data-structures/lab-3-1/: d.cpp  f.cpp  i.cpp  j.cpp
algorithms-and-data-structures/lab-3-2/: b.cpp  d.cpp  i.cpp
algorithms-and-data-structures/lab-3-3/: a.cpp  d.cpp  k.cpp
algorithms-and-data-structures/lab-4-1/: e.cpp
algorithms-and-data-structures/lab-4-2/: a.cpp  b.cpp  c.cpp
algorithms-and-data-structures/lab-4-3/: a.cpp  c.py
algorithms-and-data-structures/lab-4-4/: a.cpp
discrete-mathematics/: README.md
discrete-mathematics/lab-3-1/: b.cpp  f.cpp  (+1 more)
functional-programming-haskell/: README.md
functional-programming-haskell/homework-0/: README.md  hw0.cabal  stack.yaml
functional-programming-haskell/homework-0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
functional-programming-haskell/homework-1/: README.md  hw1.cabal
functional-programming-haskell/homework-1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
functional-programming-haskell/homework-2/: LICENSE  README.md  hw2.cabal
functional-programming-haskell/homework-2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
java-advanced/: README.md
java-advanced-tests/: README.md
operating-systems/: README.md
parallel-distributed-system/: README.md
parallel-programming/: README.md
prog-intro/: README.md
prog-paradigms/: README.md
rust/: README.md
translaton-methods_compiler-theory/: README.md
web-development/: README.md
(+762 files in other folders)
