cabal-version:      1.12
name:               hw1
version:            0.1.0.0
description:        HW1 FP
homepage:           https://github.com/githubuser/HW0#readme
author:             Sharaev Pavel
maintainer:         mail@pechhenka.ru
copyright:          2022 Sharaev Pavel
license:            MIT
category:           Web
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC == 8.0.1

library
  exposed-modules:  HW1.T1
                    HW1.T2
                    HW1.T3
                    HW1.T4
                    HW1.T5
                    HW1.T6
                    HW1.T7
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
